[package]
name = "bogo"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
base64 = { workspace = true }
env_logger = { workspace = true }
nix = { version = "0.30", default-features = false, features = ["signal"] }
rustls = { path = "../rustls" }
rustls-aws-lc-rs = { path = "../rustls-aws-lc-rs" }
rustls-ring = { path = "../rustls-ring" }
webpki = { workspace = true }

[features]
default = []
fips = ["rustls-aws-lc-rs/fips"]

[lints]
workspace = true
