[package]
name = "rustls-connect-tests"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Rustls connectivity based integration tests."
publish = false

[dependencies]
rustls = { path = "../rustls", features = ["log"] }

[dev-dependencies]
regex = { workspace = true }
ring = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
