[package]
name = "rustls-examples"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Rustls example code and tests."
publish = false

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
hickory-resolver = { workspace = true }
log = { workspace = true }
mio = { workspace = true }
rcgen = { workspace = true }
rustls = { path = "../rustls", features = ["aws-lc-rs", "log"] }
serde = { workspace = true }
tokio = { workspace = true }
webpki-roots = { workspace = true }

[lints]
workspace = true
