[package]
name = "no-std-embedded-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b", features = [
    "defmt",
    "stm32f429zi",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
]  }
embassy-sync = {  git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b", features = ["defmt"] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b", features = [
    "defmt",
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = { version = "2", features = ["nightly"] }

[profile.dev]
opt-level = 'z'

[profile.release]
debug = 2

[workspace]
