[package]
name = "no-std-embedded-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b", features = [
    "defmt",
    "stm32f429zi",
    "unstable-pac",
    "memory-x",
    "time-driver-any",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b", features = [
    "defmt",
] }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b", features = [
    "nightly",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b", features = [
    "defmt",
    "tcp",
    "udp",
    "dns",
    "dhcpv4",
    "medium-ethernet",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "fe8c46b" }
embedded-io-async = "0.6.1" # `TcpSocket::write_all`

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
getrandom = { version = "0.2.11", features = ["custom"] }
linked_list_allocator = "0.10.5"
panic-probe = { version = "0.3", features = ["print-defmt"] }
spin = { version = "0.9.8", default-features = false, features = [
    "spin_mutex",
    "once",
] }
static_cell = { version = "2", features = ["nightly"] }
webpki-roots = "0.26"

# crypto-provider
chacha20poly1305 = { version = "0.10.0", default-features = false, features = [
    "alloc",
] }
der = "0.7.0"
ecdsa = "0.16.8"
hmac = "0.12.0"
hpke-rs = { version = "0.1.2", optional = true }
hpke-rs-crypto = { version = "0.1.2", optional = true }
hpke-rs-rust-crypto = { version = "0.1.2", optional = true }
p256 = { version = "0.13.2", default-features = false, features = [
    "alloc",
    "ecdsa",
    "pkcs8",
] }
pkcs8 = { version = "0.10.2" }
rand_core = { version = "0.6", features = ["getrandom"] }
rustls = { git = "https://github.com/japaric/rustls", branch="no-std-support", default-features = false, features = [
    "tls12",
] }
rsa = { version = "0.9.0", features = ["sha2"], default-features = false }
sha2 = { version = "0.10.0", default-features = false }
signature = "2"
webpki = { package = "rustls-webpki", version = "=0.102", features = [
    "alloc",
], default-features = false }
x25519-dalek = "2"
heapless = "0.8.0"

# for memory tracing
tlsf = "1.1.0" 

[profile.dev]
opt-level = "z"

[profile.release]
debug = 2

[workspace]
