[package]
description = "Rustls tests that require OpenSSL"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
name = "rustls-openssl-tests"
publish = false
version = "0.0.1"

[dependencies]
asn1 = { workspace = true }
base64 = { workspace = true }
num-bigint = { workspace = true }
once_cell = { workspace = true }
rustls = { path = "../rustls", features = ["aws-lc-rs"] }
openssl = { workspace = true }

[lints]
workspace = true
