[package]
name = "rustls-openssl-tests"
version = "0.0.1"
edition.workspace = true
description = "Rustls tests that require OpenSSL"
license = "Apache-2.0 OR ISC OR MIT"
publish = false

[dependencies]
asn1 = { workspace = true }
base64 = { workspace = true }
num-bigint = { workspace = true }
once_cell = { workspace = true }
rustls = { path = "../rustls" }
rustls-aws-lc-rs = { path = "../rustls-aws-lc-rs" }
rustls-util = { path = "../rustls-util" }
openssl = { workspace = true }

[lints]
workspace = true
