[package]
name = "rustls-provider-example"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Example of rustls with custom crypto provider."
publish = false

[dependencies]
chacha20poly1305 = { version = "0.10.0", default-features = false, features = ["alloc"] }
der = "0.7.0"
ecdsa = "0.16.8"
hmac = "0.12.0"
hpke-rs = { version = "0.1.2", optional = true }
hpke-rs-crypto = { version = "0.1.2", optional = true }
hpke-rs-rust-crypto = { version = "0.1.2", optional = true }
p256 = { version = "0.13.2", default-features = false, features = ["alloc", "ecdsa", "pkcs8"] }
pkcs8 = { version = "0.10.2" }
pki-types = { package = "rustls-pki-types", version = "0.2.2" }
rand_core = { version = "0.6.0", features = ["getrandom"] }
# FIXME use `path = "../rustls"`; this is currently using a git dependency to keep the commit history (wrt to main) short
rustls = { git = "https://github.com/japaric/rustls", branch = "no-std-support", default-features = false, features = ["logging", "tls12"] }
rsa = { version = "0.9.0", features = ["sha2"], default-features = false }
sha2 = { version = "0.10.0", default-features = false }
signature = "2"
webpki = { package = "rustls-webpki", version = "=0.102.0-alpha.7", features = ["alloc"], default-features = false }
x25519-dalek = "2"

[dev-dependencies]
env_logger = "0.10"
hex = "0.4.3"
rcgen = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webpki-roots = "=0.26.0-alpha.2"

[features]
default = ["std"]
std = ["rustls/std", "dep:hpke-rs", "dep:hpke-rs-crypto", "dep:hpke-rs-rust-crypto"]
