[package]
name = "rustls-provider-example"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Example of rustls with custom crypto provider."
publish = false

[dependencies]
chacha20poly1305 = "0.10.0"
der = "0.7.0"
ecdsa = "0.16.8"
env_logger = "0.10"
hmac = "0.12.0"
hpke-rs = "0.1.2"
hpke-rs-crypto = "0.1.2"
hpke-rs-rust-crypto = "0.1.2"
p256 = "0.13.2"
pkcs8 = { version = "0.10.2", features = ["std"] }
pki-types = { package = "rustls-pki-types", version = "1", features = ["std"] }
rand_core = "0.6.0"
rustls = { path = "../rustls", default-features = false, features = ["logging", "tls12"] }
rsa = { version = "0.9.0", features = ["sha2"] }
sha2 = "0.10.0"
signature = "2"
webpki = { package = "rustls-webpki", version = "0.102", features = ["alloc", "std"], default-features = false }
webpki-roots = "0.26"
x25519-dalek = "2"

[dev-dependencies]
hex = "0.4.3"
rcgen = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
