[package]
name = "rustls-provider-example"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Example of rustls with custom crypto provider."
publish = false

[dependencies]
chacha20poly1305 = { workspace = true }
der = { workspace = true }
ecdsa = { workspace = true }
hmac = { workspace = true }
hpke-rs = { workspace = true }
hpke-rs-crypto = { workspace = true }
hpke-rs-rust-crypto = { workspace = true }
p256 = { workspace = true }
pkcs8 = { workspace = true }
rand_core = { workspace = true }
rustls = { path = "../rustls", default-features = false, features = ["log", "webpki"] }
rsa = { workspace = true }
sha2 = { workspace = true }
signature = { workspace = true }
subtle = { workspace = true }
x25519-dalek = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
rcgen = { workspace = true }
rustls-util = { path = "../rustls-util" }
webpki-roots = { workspace = true }

[features]
default = ["std"]
std = ["hpke-rs/std", "hpke-rs-crypto/std", "pkcs8/std", "rustls/std"]

[lints]
workspace = true
