[package]
name = "rustls-mio"
version = "0.15.1"
edition = "2018"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
description = "Rustls example code and tests that depend on mio."
homepage = "https://github.com/ctz/rustls"
repository = "https://github.com/ctz/rustls"
categories = ["network-programming", "cryptography"]

[features]
default = ["logging"]
logging = ["log"]
dangerous_configuration = ["rustls/dangerous_configuration"]
quic = ["rustls/quic"]

[dependencies]
base64 = "0.10"
log = { version = "0.4.4", optional = true }
rustls = { path = ".." }
sct = "0.6"
webpki = "0.21.0"

[dev-dependencies]
ct-logs = "0.6"
docopt = "~1.0"
env_logger = "0.6.1"
mio = "0.6.14"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
tempfile = "3.0"
vecio = "0.1"
webpki-roots = "0.17"

[[example]]
name = "tlsclient"
path = "examples/tlsclient.rs"

[[example]]
name = "tlsserver"
path = "examples/tlsserver.rs"

[[example]]
name = "simpleclient"
path = "examples/simpleclient.rs"

[[example]]
name = "simple_0rtt_client"
path = "examples/simple_0rtt_client.rs"
required-features = ["logging"]
