[package]
name = "rustls-post-quantum"
version = "0.3.0-alpha.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0 OR ISC OR MIT"
readme = "README.md"
description = "Experimental support for post-quantum key exchange in rustls"
homepage = "https://github.com/rustls/rustls"
repository = "https://github.com/rustls/rustls"
categories = ["network-programming", "cryptography"]
autobenches = false

[dependencies]
aws-lc-rs = { workspace = true, features = ["unstable"] }
rustls-aws-lc-rs = { path = "../rustls-aws-lc-rs" }
rustls = { path = "../rustls", version = "0.24.0-dev.0", default-features = false }
webpki = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
env_logger = { workspace = true }
rcgen = { workspace = true, features = ["aws_lc_rs_unstable"] }
rustls-test = { workspace = true, default-features = false }
rustls-util = { workspace = true }
webpki-roots = { workspace = true }

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[lints]
workspace = true
