[package]
name = "rustls-provider-test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Integration tests for Rustls cryptography providers"
publish = false

[dependencies]
hex = "0.4"
provider-example = { package = "rustls-provider-example", version = "0.0.1", path = "../provider-example" }
rustls = { version = "0.24.0-dev.0", features = ["log"], path = "../rustls" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
provider-example = { package = "rustls-provider-example", path = "../provider-example" }
rustls-aws-lc-rs = { path = "../rustls-aws-lc-rs" }

[lints]
workspace = true
